--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -55,19 +55,13 @@
   </div>
   <div class="row p-1">
     <div class="col d-flex justify-content-center">
-      <a>Advanced search</a>
+      <a href="">Advanced search</a>
     </div>
     <div class="col d-flex justify-content-center">
-      <button
-        type="button"
-        class="searchButton btn btn-primary"
-        (click)="log()">
-        Search
-      </button>
+      <button type="button" class="searchButton btn btn-primary">Search</button>
     </div>
   </div>
 </div>
-
 <!-- <div class="mx-auto body flex-column">
     <div class="row row-cols-auto d-flex w-100 m-0 mb-3">
       <div
