--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -9,7 +9,6 @@
 
 .title {
   height: 100px;
-  /* padding: 0 10px; */
   width: 80%;
   margin: auto;
   font-size: 2rem;
@@ -33,7 +32,6 @@
 .smallImagesContainer {
   height: 100px;
   width: 80%;
-  /* background-color: gray; */
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -57,7 +55,6 @@
 }
 
 .mobileContainer {
-  background-color: aliceblue;
   display: flex;
   overflow-x: auto;
   padding: 24px;
@@ -83,6 +80,49 @@
 .mobileImage {
   aspect-ratio: 4/3;
   max-height: 100%;
+}
+
+.showImageFullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--background-color);
+}
+
+.closeFullscreen {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  z-index: 1;
+  background-color: var(--background-color);
+  border-radius: 50%;
+  border: 1px solid var(--accent-color);
+}
+
+.closeFullscreen img {
+  aspect-ratio: 1 / 1;
+  width: 48px;
+}
+
+.imageFullscreen {
+  max-width: 100vw;
+  top: 50%;
+}
+
+.imageFullscreen img {
+  aspect-ratio: 4 / 3;
+  max-width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.darkMode {
+  filter: invert(1);
 }
 
 @media only screen and (max-width: 1200px) {
