--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -6,8 +6,7 @@
     </div>
     <div>{{ car.price }}zł</div>
   </div>
-  <div>{{ isMobile ? "is mobile" : "is not mobile" }}</div>
-  <div class="bigImage">
+  <div class="bigImage" (click)="showFullScreen()">
     <img
       src="{{ currentImageSrc }}"
       alt="pagani"
@@ -41,5 +40,25 @@
     <div class="row justify-content-center m-0">r2</div>
     <div class="row justify-content-center m-0">r3</div>
     <div class="row justify-content-center m-0">r4</div>
+    <div class="row justify-content-center m-0">r1</div>
+    <div class="row justify-content-center m-0">r2</div>
+    <div class="row justify-content-center m-0">r3</div>
+    <div class="row justify-content-center m-0">r4</div>
+    <div class="row justify-content-center m-0">r1</div>
+    <div class="row justify-content-center m-0">r2</div>
+    <div class="row justify-content-center m-0">r3</div>
+    <div class="row justify-content-center m-0">r4</div>
+  </div>
+</div>
+
+<div *ngIf="showImageFullscreen" class="showImageFullscreen">
+  <div class="closeFullscreen" (click)="closeFullscreen()">
+    <img
+      src="../../assets/icons/close.svg"
+      alt="menu"
+      [ngClass]="{ darkMode: isDarkTheme }" />
+  </div>
+  <div class="imageFullscreen">
+    <img src="{{ currentImageSrc }}" alt="menu" />
   </div>
 </div>
