cars pt1, card experiments

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -10,3 +10,31 @@
     </div>
   </div>
 </div>
+
+<div class="wrapper">
+  <div class="card">
+    <h2>title</h2>
+    <p>description</p>
+  </div>
+  <div class="card">
+    <h2>title</h2>
+    <p>description</p>
+  </div>
+  <div class="card">
+    <h2>title</h2>
+    <p>description</p>
+  </div>
+  <div class="card">
+    <h2>title</h2>
+    <p>description</p>
+  </div>
+  <div class="card">
+    <h2>title</h2>
+    <p>description</p>
+  </div>
+</div>
+<br /><br /><br />
+<label>
+  <input type="checkbox" title="" />
+  <span class="checkbox"></span>
+</label>
