--- a/src/app/cards/cards.component.css
+++ b/src/app/cards/cards.component.css
@@ -109,3 +109,55 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.wrapper {
+  display: flex;
+  overflow-x: scroll;
+  padding: 24px;
+  box-sizing: border-box;
+  width: 100vw;
+  scroll-snap-type: x mandatory;
+  scroll-padding: auto;
+  scroll-padding-left: 10px;
+  border-radius: 8px;
+  gap: 12px;
+}
+
+.wrapper .card {
+  flex: 1 0 auto;
+  width: 90%;
+  padding: 24px;
+  border-radius: 8px;
+  scroll-snap-align: start;
+}
+
+label {
+  display: block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+input {
+  position: absolute;
+  transform: scale(0);
+}
+
+input:checked ~ .checkbox {
+  transform: rotate(45deg);
+  width: 20px;
+  margin-left: 16px;
+  border-color: #24c78e;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-radius: 0;
+}
+
+.checkbox {
+  display: block;
+  width: inherit;
+  height: inherit;
+  border: 3px solid #434343;
+  border-radius: 6px;
+  transition: all 0.375s;
+}
